# increa

./: .gitignore  README.md
increa_proj/: .gitignore  CMakeLists.txt  authhints.txt  cmakehints.txt  config.json  go.sh  main.cc  quiery.sh  script.sh  stateless, stateful.txt
increa_proj/ORM/: CMakeLists.txt
increa_proj/ORM/data/: request.txt
increa_proj/ORM/lib/: CMakeLists.txt
increa_proj/ORM/lib/include/: DatabaseMOCK.hpp  IModelManager.hpp  ORM.hpp  ORMGenerator.hpp
increa_proj/ORM/lib/src/: DatabaseMOCK.cpp  ORM.cpp  ORMGenerator.cpp
increa_proj/ORM/lib/tests/: CMakeLists.txt
increa_proj/ORM/lib/tests/src/: test_ORM.cpp
increa_proj/ORM/src/: main.cpp
increa_proj/components/: feed.cpp
increa_proj/controllers/: Account.cc  Account.h  Account_Resume.cc  Account_Resume.h  Clusters.cc  Clusters.h  Resume.cc  Resume.h  TestCtrt.cc  TestCtrt.h
increa_proj/filters/: auth_filter.cc  auth_filter.h  empty_body_filter.cc  empty_body_filter.h  login_filter.cc  login_filter.h  settings_filter.cc  settings_filter.h  signup_filter.cc  signup_filter.h
increa_proj/test/: CMakeLists.txt  test_main.cc
